# cpp_nixos_template

./: CMakeLists.txt  Makefile  README.md  main.cpp  shell.nix
src/: solution.cpp  solution.h
tests/: test_solution.cpp
